--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -11,6 +11,9 @@ body {
 
 #app {
     height: 100%;
+	display: flex;
+	flex-direction: column;
+	background: $bg-color;
 
 	form {
 		.form-group {
@@ -21,13 +24,13 @@ body {
 			font-size: clamp(1.25rem, 2vw, 1.6rem);
 		}
 
-		label {
+		label:not(#musics) {
 			display: inline-block;
 			margin-bottom: 0.5rem;
 			color: $primary-color;
 		}
 
-		input {
+		input:not(input[type=file]) {
 			width: 100%;
 			padding: 1rem 0.5rem;
 			color: $primary-color;
@@ -35,17 +38,17 @@ body {
 			border-radius: 3px;
 			border: 2px solid $primary-color;
 			outline: none;
+		}	
+		
+		small {
+			display: inline-block;
+			margin-top: 0.5rem;
+			font-size: clamp(1.1rem, 2vw, 1.3rem);
+			color: red;
 		}
 	}
 
-	small {
-		display: inline-block;
-		margin-top: 0.5rem;
-		font-size: clamp(1.1rem, 2vw, 1.3rem);
-		color: red;
+	main {
+		height: 100%;
 	}
-}
-
-main {
-    height: 100%;
 }
