--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -2,18 +2,29 @@
 
 html {
 	font-size: 62.5%;
-	font-family: $font-fam;
+	font-family: $body-font;
 }
 
 body {
 	height: 100vh;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background-color: $primary-color;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(123, 123, 123, 0.5);
+	border-radius: 5px;
+}
+
 #app {
     height: 100%;
 	display: flex;
 	flex-direction: column;
-	background: $bg-color;
+	background: $second-color;
 
 	form {
 		.form-group {
@@ -27,24 +38,25 @@ body {
 		label:not(#musics) {
 			display: inline-block;
 			margin-bottom: 0.5rem;
-			color: $primary-color;
+			color: $first-color;
 		}
 
 		input:not(input[type=file]) {
 			width: 100%;
 			padding: 1rem 0.5rem;
-			color: $primary-color;
+			color: $first-color;
 			background-color: transparent;
 			border-radius: 3px;
-			border: 2px solid $primary-color;
+			border: 2px solid $first-color;
 			outline: none;
+			box-shadow: $shadow;
 		}	
 		
 		small {
 			display: inline-block;
 			margin-top: 0.5rem;
 			font-size: clamp(1.1rem, 2vw, 1.3rem);
-			color: red;
+			color: $danger-color;
 		}
 	}
 
