--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,11 +1,20 @@
-// $bg-color: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
-// $bg-color: linear-gradient(to right, #304352f1, #d7d2cc);
-// $bg-color: linear-gradient(to right, #8e9eab, #eef2f3 80%);
-$bg-color:#23263e;
+$bg-color: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
+$bg-color: linear-gradient(to right, #304352f1, #d7d2cc);
+$bg-color: linear-gradient(to right, #8e9eab, #eef2f3 80%);
 $btn-color: white;
 $primary-color:  white;
-$secondary-color: cornflowerblue;
 $trois-color: #121921;
-$danger-color: rgba(255, 0, 0, 0.85);
-$font-fam: 'Roboto', sans-serif;
-$time-anim: 300ms;
+
+
+
+// ----- Color ----- //
+$first-color: #ffffff;
+$second-color: #252741;
+$danger-color: #f8494f;
+$shadow: 2px 2px 20px 5px rgba(255, 255, 255, 0.1);
+
+// ----- Typography ----- //
+$body-font: 'Poppins', sans-serif;
+
+// ----- Other ----- //
+$transition-time: 250ms;
