Amélioration du design et des composant UI

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,14 +1,6 @@
-$bg-color: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
-$bg-color: linear-gradient(to right, #304352f1, #d7d2cc);
-$bg-color: linear-gradient(to right, #8e9eab, #eef2f3 80%);
-$btn-color: white;
-$primary-color:  white;
-$trois-color: #121921;
-
-
-
 // ----- Color ----- //
 $first-color: #ffffff;
+$first-color-light: #d8dadddc;
 $second-color: #252741;
 $danger-color: #f8494f;
 $shadow: 2px 2px 20px 5px rgba(255, 255, 255, 0.1);
