--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -13,7 +13,7 @@ body {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background-color: $primary-color;
+    background-color: $first-color;
 }
 ::-webkit-scrollbar-thumb {
     background-color: rgba(123, 123, 123, 0.5);
@@ -21,9 +21,6 @@ body {
 }
 
 #app {
-    height: 100%;
-	display: flex;
-	flex-direction: column;
 	background: $second-color;
 
 	form {
@@ -61,6 +58,6 @@ body {
 	}
 
 	main {
-		height: 100%;
+		height: 100vh;
 	}
 }
