--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -10,13 +10,13 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
-::-webkit-scrollbar-track {
-    background-color: $first-color;
-}
+// ::-webkit-scrollbar-track {
+//     background-color: $first-color;
+// }
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(123, 123, 123, 0.5);
+    background-color: $first-color;
 	border-radius: 5px;
 }
 
