--- a/client/src/assets/scss/_mixins.scss
+++ b/client/src/assets/scss/_mixins.scss
@@ -4,3 +4,9 @@
     justify-content: $justify; 
     align-items: center; 
 }
+
+@mixin Ellipsis($space) {
+    text-overflow: ellipsis;
+    white-space: $space;
+    overflow: hidden;
+}
