added features to modify a music

--- a/client/src/assets/scss/base.scss
+++ b/client/src/assets/scss/base.scss
@@ -42,3 +42,10 @@ form {
         }
     }
 }
+
+.error {
+    margin-block: 0.5rem;
+    font-size: clamp(1.15rem, 2vw, 1.4rem);
+    color: $danger-color;
+    text-align: center;
+}
